# StaticAnalysis

./: .clang-tidy  .gitignore  API.md  CMakeLists.txt  Dockerfile  QUICKSTART.md  README.md  requirements.txt  start_api.sh  test.cpp
api/: README.md  app.py  models.py  queue_manager.py  test_api.py  worker.py
configs/problem_1/: .clang-tidy
examples/: .clang-tidy  main.c  main.cpp  sample_bad.cpp  sample_c_bad.c  test_stl.cpp
include/misc/: ForbidArraysCheck.h  ForbidFunctionsCheck.h  ForbidLoopsCheck.h  ForbidSTLCheck.h
presets/: forbid_arrays.yaml  forbid_both.yaml  forbid_loops.yaml
scripts/: generate_tidy_config.py
src/: ForbidArraysCheck.cpp  ForbidFunctionsCheck.cpp  ForbidLoopsCheck.cpp  ForbidSTLCheck.cpp  RegisterModule.cpp
